; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_bcm_kona_wdt.c_secure_register_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_bcm_kona_wdt.c_secure_register_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm_kona_wdt = type { i32, i32 }

@SECWDOG_WD_LOAD_FLAG = common dso_local global i32 0, align 4
@SECWDOG_MAX_TRY = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4
@SECWDOG_RESERVED_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bcm_kona_wdt*, i32)* @secure_register_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @secure_register_read(%struct.bcm_kona_wdt* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bcm_kona_wdt*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.bcm_kona_wdt* %0, %struct.bcm_kona_wdt** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %34, %2
  %9 = load i32, i32* %7, align 4
  %10 = icmp ugt i32 %9, 1
  %11 = zext i1 %10 to i32
  %12 = call i64 @unlikely(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %8
  %15 = call i32 @udelay(i32 5)
  br label %16

16:                                               ; preds = %14, %8
  %17 = load %struct.bcm_kona_wdt*, %struct.bcm_kona_wdt** %4, align 8
  %18 = getelementptr inbounds %struct.bcm_kona_wdt, %struct.bcm_kona_wdt* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %5, align 4
  %21 = add nsw i32 %19, %20
  %22 = call i32 @readl_relaxed(i32 %21)
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = add i32 %23, 1
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %16
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* @SECWDOG_WD_LOAD_FLAG, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %25
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* @SECWDOG_MAX_TRY, align 4
  %33 = icmp ult i32 %31, %32
  br label %34

34:                                               ; preds = %30, %25
  %35 = phi i1 [ false, %25 ], [ %33, %30 ]
  br i1 %35, label %8, label %36

36:                                               ; preds = %34
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* @SECWDOG_WD_LOAD_FLAG, align 4
  %39 = and i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %36
  %42 = load i32, i32* @ETIMEDOUT, align 4
  %43 = sub nsw i32 0, %42
  store i32 %43, i32* %3, align 4
  br label %49

44:                                               ; preds = %36
  %45 = load i32, i32* @SECWDOG_RESERVED_MASK, align 4
  %46 = load i32, i32* %6, align 4
  %47 = and i32 %46, %45
  store i32 %47, i32* %6, align 4
  %48 = load i32, i32* %6, align 4
  store i32 %48, i32* %3, align 4
  br label %49

49:                                               ; preds = %44, %41
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @readl_relaxed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
